# imgtools_m8

./: .codacy.yml  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README_DEV.md  REPOSITORY_CONTEXT.md  SECURITY.md  codecov.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: FUNDING.yml  codecov.yml  dependabot.yml
.github/workflows/: CI.yaml  CI.yml  docker-publish.yaml  python-package.yml  python-publish.yml
auth_user_service/: .dockerignore  .example_env  Dockerfile  __init__.py  alembic.ini  main.py  requirements-docker-dev.txt  requirements-fastapi.txt  requirements_base.tx  requirements_base.txt  requirements_dev.txt  requirements_prod.txt
auth_user_service/alembic/: env.py
auth_user_service/core/: __init__.py  client.py  config.py  db_utils.py  deps.py  engine_async.py  engine_sync.py  exceptions.py  init_db.py  security.py
auth_user_service/db_models/: __init__.py  api_keys.py  sessions.py  shared.py  users.py
auth_user_service/routes/: __init__.py  api_keys.py  dashboard.py  google_auth.py  health.py  jwks.py  login.py  oauth_login.py  private.py  profile.py  sessions.py  users.py
auth_user_service/schemas/: __init__.py  dashboard.py  google.py  user.py
auth_user_service/scripts/: docker_start.sh  fastapi_pre_start.py  initial_data.py  pre_start.sh  start.py
auth_user_service/services/: api_keys.py  auth.py  client_sessions.py  dashboard.py  oauth.py  users.py
auth_user_service/utils/: files.py
docker_compose/imgtools_dev/: README.md  docker-compose.yml
docs/: conf.py  index.rst  requirements.in  requirements.txt
examples/: __init__.py  img_tools_web.py  imgtools_perf.py  imgtools_web.py  multiprocess.py
examples/addon/: .env.example  .gitignore  README.md  biome.json  index.html  oauth-callback.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
examples/addon/public/: manifest.json
examples/addon/src/: background.ts  main.tsx  oauth-callback.tsx  style.css
examples/docker_compose/: .gitattributes  README.md
examples/docker_compose/RS256_m8/: .env.example  README.md  api.env.example  auth.env.example  docker-compose.yml  example.env.txt
examples/docker_compose/dev_postgres_m8/: .env.example  .gitignore  README.md  api.env.example  auth.env.example  docker-compose.yml  init.sh
examples/docker_compose/env_rs256_m8/: README.md  auth.env.example  docker-compose.yml
examples/docker_compose/hardened_m8/: .env.example  .gitignore  README.md  api.env.example  auth.env.example  docker-compose.yml
examples/docker_compose/lite_es256_m8/: README.md  auth.env.example  docker-compose.yml
examples/docker_compose/lite_hybrid_m8/: README.md  auth.env.example  docker-compose.yml
examples/fastapi_full/: .dockerignore  .example_env  .gitignore  Dockerfile  __init__.py  alembic.ini  main.py  requirements_base.txt  requirements_dev.txt  requirements_prod.txt
examples/fastapi_minimal/: Dockerfile  __init__.py  main.py  requirements.txt  routes.py
examples/fastapi_service/: .dockerignore  .example_env  .gitignore  Dockerfile  __init__.py  fastapi_pre_start.py  main.py  requirements_base.txt  requirements_dev.txt  requirements_prod.txt
imgtools_m8/: __init__.py  __main__.py  async_api.py  exceptions.py  helper.py  image_process.py  img_expander.py  img_tools.py  imgtools.py  model_conf.py  model_scale_selector.py  multiprocess.py  process_conf.py  results.py
imgtools_m8/core/: Image_format_interface.py  __init__.py  constants.py  exceptions.py
imgtools_m8/helpers/: __init__.py  cv_utils.py  file_utils.py  image_utils.py  model_conf.py  model_downloader.py  regex_patterns.py  scan_dir.py
imgtools_m8/schemas/: __init__.py  conf_schema.py  conf_schemas.py  upscaler_schema.py
tests/: __init__.py  conftest.py  helper.py  test_async_process_image.py  test_cli.py  test_helper.py  test_image_process.py  test_img_expander.py  test_img_tools.py  test_imgtools.py  test_model_conf.py  test_model_downloader.py  test_model_resolver.py  test_model_scale_selector.py  test_multiprocess.py  test_precess_conf.py  test_process_image_bytes.py
tests/core/: client_test.py  db_utils_test.py  deps_test.py  security_test.py  test_image_format_interface.py
tests/db_models/: shared_test.py  users_test.py
tests/helpers/: __init__.py  test_file_utils.py  test_image_utils.py  test_regex_patterns.py  test_scan_dir.py
tests/live/: conftest.py  test_asymmetric.py  test_hs256.py  test_hybrid.py  test_redteam_rs256.py  test_security_universal.py  test_stateful.py  test_stateless.py
tests/routes/: health_test.py  test_google_auth.py  test_oauth_login.py  test_private_jti.py  test_profile.py
tests/schemas/: __init__.py  dashboard_test.py  google_test.py  test_conf_schema.py  test_upscaler_schema.py  user_test.py
tests/security/: __init__.py  conftest.py  test_client_ip.py  test_exception_handling.py  test_forced_churn_detection.py  test_input_sanitization.py  test_iss_aud_validation.py  test_jwks_endpoint.py  test_jwt_security.py  test_oauth_adversarial.py  test_redis_resilience.py  test_refresh_key_rotation.py  test_refresh_lifecycle.py  test_session_chain_invalidation.py
tests/services/: api_keys_test.py  auth_test.py  client_sessions_test.py  dashboard_test.py  users_test.py
tests/sources_test/: .private_file
tests/utils/: files_test.py
(+371 files in other folders)
