[metadata]
name = imgtools_m8
version = attr: imgtools_m8.__version__
author = Eli Serra
author_email = mano8@gmail.com
url = https://github.com/mano8/imgtools_m8
description = Simple image tools package. Used to convert, downscale or upscale images.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Python, image converter, image scale, cv2, deep-learning
license = Apache
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >3.10
install_requires =
    opencv-contrib-python>=4.11.0.86
    ve_utils>=2.5.3
    numpy>=2.3.1
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
test =
    pytest>=8.4.1
    pytest-cov>=6.2.1
    coverage>=7.9.1

[options.package_data]
imgtools_m8 =
    models/*.pb