[metadata]
name = imgtools_m8
version = attr: imgtools_m8.__version__
author = Eli Serra
author_email = mano8@gmail.com
url = https://github.com/mano8/imgtools_m8
description = Python image processing package for converting, downscaling, and optionally upscaling images using Pillow.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Python, image converter, image scale, cv2, deep-learning
license = Apache
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.11
install_requires =
    Pillow>=12.2.0
    pydantic>=2.13.4
    numpy>=2.4.6
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    imgtools = imgtools_m8.__main__:main

[options.extras_require]
dnn =
    opencv-contrib-python>=4.13.0.92
cli =
    colorama>=0.4.6
test =
    pytest>=9.0.3
    pytest-cov>=7.1.0
    coverage>=7.14.1
    ruff>=0.11.0
    mypy>=2.1.0

[options.package_data]
imgtools_m8 =
    models/*.pb